# form_filler

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURAL_REVIEW.md  ARCHITECTURE_DIAGRAM.md  CLAUDE.md  LICENSE  LINTING_AND_FIXES_SUMMARY.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_EXAMPLE.md  fill_form.py  generate_stub.py  pyproject.toml  requirements.txt
.claude/commands/: create-mr.md  gh_fix-issue  gh_fix-issue.md  gh_new-worktree  gh_new-worktree.md  gh_review-pr.md  gh_write-issue.md  gh_write_issue.md  gl_fix-issue  gl_fix-issue.md  gl_new-worktree  gl_review-mr  gl_review-mr.md  gl_write-issue  gl_write-issue.md
.claude/docs/: DEV_PLAN.md  GIT_WORKFLOW.md  TICKETS.md
.claude/scripts/: README.md  setup_worktree.sh
.github/workflows/: ci.yml  release.yml
src/form_filler/: __init__.py  cli.py  container.py
src/form_filler/application/: __init__.py  extract_fields.py  field_categorizer.py
src/form_filler/domain/: __init__.py  exceptions.py  interfaces.py  models.py  validators.py  value_objects.py
src/form_filler/infrastructure/pdf/: __init__.py  pypdfform_adapter.py
src/form_filler/infrastructure/persistence/: __init__.py  json_repository.py  yaml_repository.py
src/form_filler/presentation/cli/: __init__.py  commands.py
src/form_filler/shared/: __init__.py
tests/: __init__.py  conftest.py  test_form_filler.py  test_form_inspector.py  test_llm_assistant.py  test_user_data_manager.py
tests/integration/: __init__.py  test_pdf_extraction_integration.py
tests/unit/: __init__.py  test_domain_models.py  test_extract_fields_use_case.py  test_field_categorizer.py
tests/unit/domain/: test_exceptions.py  test_interfaces.py  test_validators.py  test_value_objects.py
